getting a complete set of data

--- a/src/components/ticketList/ticketList.module.scss
+++ b/src/components/ticketList/ticketList.module.scss
@@ -21,4 +21,9 @@
     letter-spacing: 0.5px;
     text-align: center;
     color: #FFFFFF;
+    cursor: pointer;
+}
+
+.loader {
+    margin: 20px;
 }
