--- a/src/components/ticket/ticket.module.scss
+++ b/src/components/ticket/ticket.module.scss
@@ -10,6 +10,11 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 8px 0px #0000001A;
     border-radius: 5px;
+
+    @media (max-width: 767px) {
+        width: 91%;
+        padding: 15px;
+    }
 }
 
 .header,
@@ -18,6 +23,10 @@
     justify-content: space-between;
 
     margin-bottom: 20px;
+
+    @media (max-width: 767px) {
+        margin-bottom: 15px;
+    }
 }
 
 .price {
