--- a/src/components/ticketFilter/ticketFilter.module.scss
+++ b/src/components/ticketFilter/ticketFilter.module.scss
@@ -8,6 +8,13 @@
 
     font-family: "Open Sans";
     color: #4A4A4A;
+
+    @media (max-width: 767px) {
+        margin-bottom: 20px;
+        width: 100%;
+        height: auto;
+        white-space: nowrap;
+    }
 }
 
 .title {
@@ -19,6 +26,10 @@
     line-height: 12px;
     letter-spacing: 0.5px;
     margin: 0;
+
+    @media (max-width: 767px) {
+        text-align: center;
+    }
 }
 
 .label {
@@ -37,6 +48,11 @@
     margin: 0;
     margin-top: 10px;
     cursor: pointer;
+    
+    @media (max-width: 767px) {
+        column-count: 2;
+        padding-bottom: 10px;
+    }
 }
 
 .item {
