--- a/src/components/ticketList/ticketList.module.scss
+++ b/src/components/ticketList/ticketList.module.scss
@@ -4,6 +4,11 @@
     padding-left: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+
+    @media (max-width: 767px) {
+        width: 100%;
+        padding: 0;
+    }
 }
 
 .button {
@@ -22,8 +27,19 @@
     text-align: center;
     color: #FFFFFF;
     cursor: pointer;
+
+    @media (max-width: 767px) {
+        width: 100%;
+        margin-left: 0;
+    }
 }
 
 .loader {
     margin: 20px;
+    width: 96% !important;
+
+    @media (max-width: 767px) {
+        margin: 20px 0;
+        width: 100% !important;
+    }
 }
