--- a/src/components/ticketTabs/ticketTabs.scss
+++ b/src/components/ticketTabs/ticketTabs.scss
@@ -10,6 +10,11 @@
     line-height: 20px;
     letter-spacing: 0.5px;
 
+    @media (max-width: 767px) {
+        width: 100%;
+        margin-left: 0;
+    }
+
     ul {
         display: flex;
         justify-content: center;
