--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     background-color: #F3F7FA;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .container_logo {
