--- a/src/components/ticket/ticket.module.scss
+++ b/src/components/ticket/ticket.module.scss
@@ -11,6 +11,8 @@
     box-shadow: 0px 2px 8px 0px #0000001A;
     border-radius: 5px;
 
+    cursor: pointer;
+
     @media (max-width: 767px) {
         width: 91%;
         padding: 15px;
